--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My HTML adventure</h1>
+    <p>Hello JavaScript <strong>FlatIron</strong>is <em> amaizing </em> Learn <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"></a> easily</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+    </table>
+</body>
+</html>
